@@ -48,7 +48,41 @@ import org.apache.lucene.util.LuceneTestCase;
  *       \./
  */
 public class TestSort extends LuceneTestCase {
-  
+
+  private void assertEquals(Sort a, Sort b) {
+    LuceneTestCase.assertEquals(a, b);
+    LuceneTestCase.assertEquals(b, a);
+    LuceneTestCase.assertEquals(a.hashCode(), b.hashCode());
+  }
+
+  private void assertDifferent(Sort a, Sort b) {
+    assertFalse(a.equals(b));
+    assertFalse(b.equals(a));
+    assertFalse(a.hashCode() == b.hashCode());
+  }
+
+  public void testEquals() {
+    SortField sortField1 = new SortField("foo", SortField.Type.STRING);
+    SortField sortField2 = new SortField("foo", SortField.Type.STRING);
+    assertEquals(new Sort(sortField1), new Sort(sortField2));
+
+    sortField2 = new SortField("bar", SortField.Type.STRING);
+    assertDifferent(new Sort(sortField1), new Sort(sortField2));
+
+    sortField2 = new SortField("foo", SortField.Type.LONG);
+    assertDifferent(new Sort(sortField1), new Sort(sortField2));
+
+    sortField2 = new SortField("foo", SortField.Type.STRING);
+    sortField2.setMissingValue(SortField.STRING_FIRST);
+    assertDifferent(new Sort(sortField1), new Sort(sortField2));
+
+    sortField2 = new SortField("foo", SortField.Type.STRING, false);
+    assertEquals(new Sort(sortField1), new Sort(sortField2));
+
+    sortField2 = new SortField("foo", SortField.Type.STRING, true);
+    assertDifferent(new Sort(sortField1), new Sort(sortField2));
+  }
+
   /** Tests sorting on type string */
   public void testString() throws IOException {
     Directory dir = newDirectory();
